# hlsl2glslfork

./: .gitignore  CMakeLists.txt
hlslang/: CMakeLists.txt
hlslang/GLSLCodeGen/: CMakeLists.txt  hlslLinker.cpp
hlslang/MachineIndependent/: CMakeLists.txt  Gen_hlslang.cpp  Gen_hlslang_tab.cpp  hlslang.output
hlslang/OSDependent/: CMakeLists.txt
scripts/: build_android.py
tests/: CMakeLists.txt
